--- a/makeSequences.ipynb
+++ b/makeSequences.ipynb
@@ -14,8 +14,8 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "from Bio import SeqIO\n",
-    "from yattag import Doc\n",
+    "from Bio import SeqIO # biopython\n",
+    "from yattag import Doc # for generating HTML\n",
     "from fhirclient import client\n",
     "import fhirclient.models.codeableconcept as cc\n",
     "import fhirclient.models.coding as co\n",
@@ -178,15 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HLA-A*01:01:01:01\n",
-      "<div xmlns=\"http://www.w3.org/1999/xhtml\"><pre>this is HLA-A*01:01:01:01 end</pre></div>\n"
+      "HLA-A*01:01:01:01\n"
      ]
     }
    ],
@@ -210,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +218,7 @@
      "text": [
       "{\n",
       "    \"text\": {\n",
-      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><pre>fasta id = HLA-A*01:01:01:01 \\nreference display = HLA-A*01:01:01:01 \\nreference system = http://www.ebi.ac.uk/ipd/imgt/hla/ \\nreference code = HLA00001 \\ncoordinate system = 0 \\nstart = 0 \\nend = 3503</pre></div>\",\n",
+      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><table><tr><td>fasta id</td><td>HLA-A*01:01:01:01</td></tr><tr><td>reference display</td><td>HLA-A*01:01:01:01</td></tr><tr><td>reference system</td><td>http://www.ebi.ac.uk/ipd/imgt/hla/</td></tr><tr><td>reference code</td><td>HLA00001</td></tr><tr><td>coordinate system</td><td>0</td></tr><tr><td>start =</td><td>0</td></tr><tr><td>end =</td><td>3503</td></tr></table></div>\",\n",
       "        \"status\": \"generated\"\n",
       "    },\n",
       "    \"coordinateSystem\": 0,\n",
@@ -272,15 +271,84 @@
     "                text('reference code') \n",
     "            with tag('td'):\n",
     "                text(mySeq.referenceSeq.referenceSeqId.coding[0].code)\n",
-    "                \n",
-    "            + 'coordinate system = ' + str(mySeq.coordinateSystem) + \" \\n\"\n",
-    "            + 'start = ' + str(mySeq.referenceSeq.windowStart) + \" \\n\"\n",
-    "            + 'end = ' +   str(mySeq.referenceSeq.windowEnd)\n",
-    "        )\n",
+    "        with tag('tr'):\n",
+    "            with tag('td'):        \n",
+    "                text('coordinate system') \n",
+    "            with tag('td'):\n",
+    "                text(mySeq.coordinateSystem)\n",
+    "        with tag('tr'):\n",
+    "            with tag('td'):        \n",
+    "                text('start =') \n",
+    "            with tag('td'):\n",
+    "                text(mySeq.referenceSeq.windowStart)\n",
+    "        with tag('tr'):\n",
+    "            with tag('td'):        \n",
+    "                text('end =') \n",
+    "            with tag('td'):\n",
+    "                text(mySeq.referenceSeq.windowEnd)\n",
     "# print(doc.getvalue())\n",
     "myText.div = myDiv.getvalue()\n",
     "mySeq.text = myText\n",
     "print(json.dumps(mySeq.as_json(), indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "patient json written to file sequence.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# write resource to file\n",
+    "fname = 'sequence.json'\n",
+    "with open(fname, 'w') as outfile:\n",
+    "    json.dump(mySeq.as_json(), outfile, indent=4)\n",
+    "print(\"patient json written to file {fn}\".format(fn=fname))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"resourceType\": \"OperationOutcome\",\n",
+      "    \"text\": {\n",
+      "        \"status\": \"generated\",\n",
+      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Sequence/2612/_history/1&quot; in 3ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
+      "    },\n",
+      "    \"issue\": [\n",
+      "        {\n",
+      "            \"severity\": \"information\",\n",
+      "            \"code\": \"informational\",\n",
+      "            \"diagnostics\": \"Successfully created resource \\\"Sequence/2612/_history/1\\\" in 3ms\"\n",
+      "        }\n",
+      "    ]\n",
+      "}\n",
+      "http://fhirtest.b12x.org/baseDstu3/Sequence/2612/_history/1\n"
+     ]
+    }
+   ],
+   "source": [
+    "settings = {\n",
+    "        'app_id': 'my_web_app',\n",
+    "        'api_base': 'http://fhirtest.b12x.org/baseDstu3'\n",
+    "    }\n",
+    "smart = client.FHIRClient(settings=settings)\n",
+    "response = mySeq.create(smart.server)\n",
+    "print(json.dumps(response.json(), indent=4))\n",
+    "print(response.headers['location'])"
    ]
   },
   {
