--- a/scratchpad.ipynb
+++ b/scratchpad.ipynb
@@ -66,42 +66,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on package html:\n",
+      "Help on dict object:\n",
       "\n",
-      "NAME\n",
-      "    html - General functions for HTML manipulation.\n",
-      "\n",
-      "PACKAGE CONTENTS\n",
-      "    entities\n",
-      "    parser\n",
-      "\n",
-      "FUNCTIONS\n",
-      "    escape(s, quote=True)\n",
-      "        Replace special characters \"&\", \"<\" and \">\" to HTML-safe sequences.\n",
-      "        If the optional flag quote is true (the default), the quotation mark\n",
-      "        characters, both double quote (\") and single quote (') characters are also\n",
-      "        translated.\n",
-      "    \n",
-      "    unescape(s)\n",
-      "        Convert all named and numeric character references (e.g. &gt;, &#62;,\n",
-      "        &x3e;) in the string s to the corresponding unicode characters.\n",
-      "        This function uses the rules defined by the HTML 5 standard\n",
-      "        for both valid and invalid character references, and the list of\n",
-      "        HTML 5 named character references defined in html.entities.html5.\n",
-      "\n",
-      "DATA\n",
-      "    __all__ = ['escape', 'unescape']\n",
-      "\n",
-      "FILE\n",
-      "    /usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/html/__init__.py\n",
-      "\n",
+      "class dict(object)\n",
+      " |  dict() -> new empty dictionary\n",
+      " |  dict(mapping) -> new dictionary initialized from a mapping object's\n",
+      " |      (key, value) pairs\n",
+      " |  dict(iterable) -> new dictionary initialized as if via:\n",
+      " |      d = {}\n",
+      " |      for k, v in iterable:\n",
+      " |          d[k] = v\n",
+      " |  dict(**kwargs) -> new dictionary initialized with the name=value pairs\n",
+      " |      in the keyword argument list.  For example:  dict(one=1, two=2)\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __contains__(self, key, /)\n",
+      " |      True if D has a key k, else False.\n",
+      " |  \n",
+      " |  __delitem__(self, key, /)\n",
+      " |      Delete self[key].\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getitem__(...)\n",
+      " |      x.__getitem__(y) <==> x[y]\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __setitem__(self, key, value, /)\n",
+      " |      Set self[key] to value.\n",
+      " |  \n",
+      " |  __sizeof__(...)\n",
+      " |      D.__sizeof__() -> size of D in memory, in bytes\n",
+      " |  \n",
+      " |  clear(...)\n",
+      " |      D.clear() -> None.  Remove all items from D.\n",
+      " |  \n",
+      " |  copy(...)\n",
+      " |      D.copy() -> a shallow copy of D\n",
+      " |  \n",
+      " |  fromkeys(iterable, value=None, /) from builtins.type\n",
+      " |      Returns a new dict with keys from iterable and values equal to value.\n",
+      " |  \n",
+      " |  get(...)\n",
+      " |      D.get(k[,d]) -> D[k] if k in D, else d.  d defaults to None.\n",
+      " |  \n",
+      " |  items(...)\n",
+      " |      D.items() -> a set-like object providing a view on D's items\n",
+      " |  \n",
+      " |  keys(...)\n",
+      " |      D.keys() -> a set-like object providing a view on D's keys\n",
+      " |  \n",
+      " |  pop(...)\n",
+      " |      D.pop(k[,d]) -> v, remove specified key and return the corresponding value.\n",
+      " |      If key is not found, d is returned if given, otherwise KeyError is raised\n",
+      " |  \n",
+      " |  popitem(...)\n",
+      " |      D.popitem() -> (k, v), remove and return some (key, value) pair as a\n",
+      " |      2-tuple; but raise KeyError if D is empty.\n",
+      " |  \n",
+      " |  setdefault(...)\n",
+      " |      D.setdefault(k[,d]) -> D.get(k,d), also set D[k]=d if k not in D\n",
+      " |  \n",
+      " |  update(...)\n",
+      " |      D.update([E, ]**F) -> None.  Update D from dict/iterable E and F.\n",
+      " |      If E is present and has a .keys() method, then does:  for k in E: D[k] = E[k]\n",
+      " |      If E is present and lacks a .keys() method, then does:  for k, v in E: D[k] = v\n",
+      " |      In either case, this is followed by: for k in F:  D[k] = F[k]\n",
+      " |  \n",
+      " |  values(...)\n",
+      " |      D.values() -> an object providing a view on D's values\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __hash__ = None\n",
       "\n"
      ]
     }
    ],
    "source": [
     "import html\n",
-    "help(html)"
+    "help(html.entities.html5)"
    ]
   },
   {
