added getHLA routines using dbfetch

--- a/makeSequences.ipynb
+++ b/makeSequences.ipynb
@@ -326,29 +326,31 @@
       "    \"resourceType\": \"OperationOutcome\",\n",
       "    \"text\": {\n",
       "        \"status\": \"generated\",\n",
-      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Sequence/2612/_history/1&quot; in 3ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
+      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Sequence/2613/_history/1&quot; in 3ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
       "    },\n",
       "    \"issue\": [\n",
       "        {\n",
       "            \"severity\": \"information\",\n",
       "            \"code\": \"informational\",\n",
-      "            \"diagnostics\": \"Successfully created resource \\\"Sequence/2612/_history/1\\\" in 3ms\"\n",
+      "            \"diagnostics\": \"Successfully created resource \\\"Sequence/2613/_history/1\\\" in 3ms\"\n",
       "        }\n",
       "    ]\n",
       "}\n",
-      "http://fhirtest.b12x.org/baseDstu3/Sequence/2612/_history/1\n"
+      "http://fhirtest.b12x.org/baseDstu3/Sequence/2613/_history/1\n"
      ]
     }
    ],
    "source": [
-    "settings = {\n",
+    "doit = True\n",
+    "if doit:\n",
+    "    settings = {\n",
     "        'app_id': 'my_web_app',\n",
     "        'api_base': 'http://fhirtest.b12x.org/baseDstu3'\n",
     "    }\n",
-    "smart = client.FHIRClient(settings=settings)\n",
-    "response = mySeq.create(smart.server)\n",
-    "print(json.dumps(response.json(), indent=4))\n",
-    "print(response.headers['location'])"
+    "    smart = client.FHIRClient(settings=settings)\n",
+    "    response = mySeq.create(smart.server)\n",
+    "    print(json.dumps(response.json(), indent=4))\n",
+    "    print(response.headers['location'])"
    ]
   },
   {
