added getHLA routines using dbfetch

--- a/getHLA.ipynb
+++ b/getHLA.ipynb
@@ -9,10 +9,12 @@
     "I wanted to see if I could download an HLA sequence directly from IMGT/HLA using `dbfetch` and put it into a biopython sequence object. This is what I came up with...\n",
     "</p>\n",
     "* documentation\n",
-    "  * [biopython](http://biopython.org/)\n",
-    "  * [requests](http://docs.python-requests.org/en/master/)\n",
-    "  * [dbfetch](http://www.ebi.ac.uk/Tools/dbfetch/)\n",
-    "  * [NamedTemporaryFile](https://docs.python.org/2/library/tempfile.html)"
+    "    * [biopython](http://biopython.org/)\n",
+    "    * [requests](http://docs.python-requests.org/en/master/)\n",
+    "        * [correct way to try/except using the requests module](https://stackoverflow.com/questions/16511337/correct-way-to-try-except-using-python-requests-module)\n",
+    "    * [dbfetch](http://www.ebi.ac.uk/Tools/dbfetch/)\n",
+    "    * [NamedTemporaryFile](https://docs.python.org/2/library/tempfile.html)\n",
+    "        * [treating a string as a file](https://stackoverflow.com/questions/44381249/treat-a-string-as-a-file-in-python)"
    ]
   },
   {
@@ -106,7 +108,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now I wanted to see if I could extract features from the sequence object."
+    "### Getting exons\n",
+    "Now I wanted to see if I could extract features from the sequence object, like an exon."
    ]
   },
   {
