updated Jupyter, added isodate package, fixed code highlighting in makePatient.ipynb

--- a/makePatient.ipynb
+++ b/makePatient.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "source": [
     "But the docs are sparse at describing the methods and attributes that are in it, at least for newbies. \n",
-    "<p>\n",
+    "\n",
     "### Using `help()`\n",
     "We can use `help()` to find out more about the `patient` object."
    ]
@@ -108,6 +108,14 @@
       " |      \n",
       " |      :param FHIRServer server: The server to update the receiver on;\n",
       " |          optional, will use the instance's `server` if needed.\n",
+      " |      :returns: None or the response JSON on success\n",
+      " |  \n",
+      " |  process(self, server)\n",
+      " |      For processing transaction or batch bundles.\n",
+      " |      Attempt to create the receiver on the given server, using a POST\n",
+      " |      command.\n",
+      " |      \n",
+      " |      :param FHIRServer server: The server to create the receiver on\n",
       " |      :returns: None or the response JSON on success\n",
       " |  \n",
       " |  relativeBase(self)\n",
@@ -710,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's build a name.<br>\n",
+    "#### Let's build a name\n",
     "Since `given` has `is_list` set to `True`, we need to put it in a `list` or we'll get a `FHIRValidationError`. This is so we can have additional names as part of the full name (e.g., middle names). Since we can, we'll add a middle name. "
    ]
   },
@@ -879,7 +887,7 @@
       "text/plain": [
        "{'app_id': 'my_web_app',\n",
        " 'app_secret': None,\n",
-       " 'server': <server.FHIRServer at 0x10423d9e8>,\n",
+       " 'server': <server.FHIRServer at 0x109206048>,\n",
        " 'scope': 'user/*.* patient/*.read openid profile',\n",
        " 'redirect': None,\n",
        " 'launch_token': None,\n",
@@ -932,7 +940,7 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x104243ae8>)\n",
+      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x109204048>)\n",
       " |      Initialize self.  See help(type(self)) for accurate signature.\n",
       " |  \n",
       " |  from_state(self, state)\n",
@@ -1007,23 +1015,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we POST, a note about the `response`... As it is distributed, `patient.create()` returns json formatted  `Content`. I wanted access to the full HTTP header response, so I edited the `create`, `update`, and `delete` methods in `fhirclient/models/fhirabstractresource.py` file from (suggested by Pascal Pfiffner in this [chat.fhir.org thread](https://chat.fhir.org/#narrow/stream/python/subject/HTTP.20response.20header.20and.20location)):\n",
-    "<p>\n",
+    "#### Before we POST, a note about the `response`...\n",
+    "As it is distributed, `patient.create()` returns json formatted  `Content`. I wanted access to the full HTTP header response, so I edited the `create`, `update`, and `delete` methods in `fhirclient/models/fhirabstractresource.py` file from (suggested by Pascal Pfiffner in this [chat.fhir.org thread](https://chat.fhir.org/#narrow/stream/python/subject/HTTP.20response.20header.20and.20location)):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "from\n",
+    "```python    \n",
+    "    ret = srv.post_json(self.relativeBase(), self.as_json())\n",
+    "    if len(ret.text) > 0:\n",
+    "        return ret.json()\n",
+    "```  \n",
+    "to     \n",
     "```python\n",
-    "        ret = srv.post_json(self.relativeBase(), self.as_json())\n",
-    "        if len(ret.text) > 0:\n",
-    "            return ret.json()\n",
-    "```\n",
-    "to      \n",
-    "```python\n",
-    "        ret = srv.post_json(self.relativeBase(), self.as_json())\n",
-    "        if len(ret.text) > 0:\n",
-    "            # return the full requests.Response object\n",
-    "            return ret\n",
-    "            # return ret.json()\n",
-    "```\n",
-    "<br>\n",
+    "    ret = srv.post_json(self.relativeBase(), self.as_json())\n",
+    "    if len(ret.text) > 0:\n",
+    "        # return the full requests.Response object\n",
+    "        return ret\n",
+    "        # return ret.json()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now try POSTing the `patient` to the server using the `.create()` method"
    ]
   },
@@ -1065,16 +1084,36 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"resourceType\": \"OperationOutcome\",\n",
+      "    \"resourceType\": \"Patient\",\n",
+      "    \"id\": \"4406\",\n",
+      "    \"meta\": {\n",
+      "        \"versionId\": \"1\",\n",
+      "        \"lastUpdated\": \"2019-01-22T03:31:06.498+00:00\"\n",
+      "    },\n",
       "    \"text\": {\n",
       "        \"status\": \"generated\",\n",
-      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Patient/2609/_history/1&quot; in 15ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
+      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><div class=\\\"hapiHeaderText\\\">Jonathon Lowell <b>STORM </b></div><table class=\\\"hapiPropertyTable\\\"><tbody></tbody></table></div>\"\n",
       "    },\n",
-      "    \"issue\": [\n",
+      "    \"name\": [\n",
       "        {\n",
-      "            \"severity\": \"information\",\n",
-      "            \"code\": \"informational\",\n",
-      "            \"diagnostics\": \"Successfully created resource \\\"Patient/2609/_history/1\\\" in 15ms\"\n",
+      "            \"use\": \"official\",\n",
+      "            \"text\": \"Jonathon Lowell Storm\",\n",
+      "            \"family\": \"Storm\",\n",
+      "            \"given\": [\n",
+      "                \"Jonathon\",\n",
+      "                \"Lowell\"\n",
+      "            ]\n",
+      "        },\n",
+      "        {\n",
+      "            \"use\": \"nickname\",\n",
+      "            \"family\": \"Storm\",\n",
+      "            \"given\": [\n",
+      "                \"Johnny\"\n",
+      "            ]\n",
+      "        },\n",
+      "        {\n",
+      "            \"use\": \"nickname\",\n",
+      "            \"text\": \"Human Torch\"\n",
       "        }\n",
       "    ]\n",
       "}\n"
@@ -1101,7 +1140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Content-Encoding': 'gzip', 'Content-Type': 'application/fhir+json;charset=UTF-8', 'Date': 'Mon, 09 Apr 2018 23:39:37 GMT', 'ETag': 'W/\"1\"', 'Last-Modified': 'Mon, 09 Apr 2018 23:39:36 GMT', 'Location': 'http://fhirtest.b12x.org/baseDstu3/Patient/2609/_history/1', 'Server': 'Apache-Coyote/1.1', 'X-Powered-By': 'HAPI FHIR 3.0.0 REST Server (FHIR Server; FHIR 3.0.1/DSTU3)', 'Content-Length': '357', 'Connection': 'keep-alive'}\n"
+      "{'Content-Encoding': 'gzip', 'Content-Location': 'http://fhirtest.b12x.org/r3/Patient/4406/_history/1', 'Content-Type': 'application/fhir+json;charset=UTF-8', 'Date': 'Tue, 22 Jan 2019 03:31:06 GMT', 'ETag': 'W/\"1\"', 'Last-Modified': 'Tue, 22 Jan 2019 03:31:06 GMT', 'Location': 'http://fhirtest.b12x.org/r3/Patient/4406/_history/1', 'Server': 'Apache-Coyote/1.1', 'X-FHIR-Request-Validation': '{\"resourceType\":\"OperationOutcome\",\"text\":{\"status\":\"generated\",\"div\":\"<div xmlns=\\\\\"http://www.w3.org/1999/xhtml\\\\\"><h1>Operation Outcome</h1><table border=\\\\\"0\\\\\"><tr><td style=\\\\\"font-weight: bold;\\\\\"...', 'X-Powered-By': 'HAPI FHIR 3.6.0 REST Server (FHIR Server; FHIR 3.0.1/DSTU3)', 'transfer-encoding': 'chunked', 'Connection': 'keep-alive'}\n"
      ]
     }
    ],
@@ -1126,14 +1165,16 @@
      "output_type": "stream",
      "text": [
       "Content-Encoding: gzip\n",
+      "Content-Location: http://fhirtest.b12x.org/r3/Patient/4406/_history/1\n",
       "Content-Type: application/fhir+json;charset=UTF-8\n",
-      "Date: Mon, 09 Apr 2018 23:39:37 GMT\n",
+      "Date: Tue, 22 Jan 2019 03:31:06 GMT\n",
       "ETag: W/\"1\"\n",
-      "Last-Modified: Mon, 09 Apr 2018 23:39:36 GMT\n",
-      "Location: http://fhirtest.b12x.org/baseDstu3/Patient/2609/_history/1\n",
+      "Last-Modified: Tue, 22 Jan 2019 03:31:06 GMT\n",
+      "Location: http://fhirtest.b12x.org/r3/Patient/4406/_history/1\n",
       "Server: Apache-Coyote/1.1\n",
-      "X-Powered-By: HAPI FHIR 3.0.0 REST Server (FHIR Server; FHIR 3.0.1/DSTU3)\n",
-      "Content-Length: 357\n",
+      "X-FHIR-Request-Validation: {\"resourceType\":\"OperationOutcome\",\"text\":{\"status\":\"generated\",\"div\":\"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\"...\n",
+      "X-Powered-By: HAPI FHIR 3.6.0 REST Server (FHIR Server; FHIR 3.0.1/DSTU3)\n",
+      "transfer-encoding: chunked\n",
       "Connection: keep-alive\n"
      ]
     }
@@ -1161,7 +1202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://fhirtest.b12x.org/baseDstu3/Patient/2609/_history/1\n"
+      "http://fhirtest.b12x.org/r3/Patient/4406/_history/1\n"
      ]
     }
    ],
@@ -1175,6 +1216,13 @@
    "source": [
     "Next up, creating a `Specimen` resource that references the `Patient`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
